--- a/src/Style/HeroSection.module.css
+++ b/src/Style/HeroSection.module.css
@@ -18,6 +18,7 @@
   font-size: 1.8rem !important;
   font-weight: bold;
   color: rgb(143, 139, 139);
+  text-align: justify;
 }
 .box {
   height: 3rem;
@@ -34,7 +35,7 @@
   display: flex;
   justify-content: center;
   background-color: #462037;
-  width: 10rem;
+  width: 16rem;
   height: 3rem;
   padding: 0.2rem;
   border-radius: 5px;
