--- a/src/Style/HeroSection.module.css
+++ b/src/Style/HeroSection.module.css
@@ -1,25 +1,32 @@
 .container {
-  margin-top: 16rem !important;
+  margin-top: 8rem !important;
   width: 100%;
 }
+
 .img {
+  margin-top: 3rem !important;
   width: 20rem !important;
   height: 20rem !important;
   border-radius: 50%;
-  margin-top: 4rem;
+  object-fit: cover;
+  display: block;
+  margin: 0 auto;
 }
+
 .name {
   font-size: 4rem !important;
   font-weight: bold;
   color: #462037;
   font-family: "fantasy" !important;
 }
+
 .discription {
-  font-size: 1.8rem !important;
+  font-size: 1rem !important;
   font-weight: bold;
   color: rgb(143, 139, 139);
   text-align: justify;
 }
+
 .box {
   height: 3rem;
   width: 3rem;
@@ -27,10 +34,12 @@
   background: #462037;
   align-items: center;
 }
+
 .icon {
   color: white;
   padding: 0.7rem;
 }
+
 .box1 {
   display: flex;
   justify-content: center;
@@ -47,10 +56,13 @@
     margin-top: -4rem;
     margin-left: 2rem;
   }
+
   .name {
-    font-size: 2.5rem !important;
     text-align: center;
+    font-size: 2.5rem !important;
+
   }
+
   .box1 {
     width: 100%;
   }
